<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/titulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"/>

    <Spinner
        android:id="@+id/desplegable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Spinner>

    <EditText
        android:id="@+id/mensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:gravity="top"
        android:hint="@string/mensaje"
        android:inputType="textMultiLine" />

    <CheckBox
        android:id="@+id/checkRespuesta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkRespuesta" />

    <Button
        android:id="@+id/botonEnviar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:onClick="enviarFeedback"
        android:text="@string/botonEnviar"/>

</LinearLayout>